--- a/source/style2.css
+++ b/source/style2.css
@@ -1,8 +1,9 @@
 body{
+     
     margin:0;
     padding:0;
     font-family: sans-serif;
-    background: url(back.jpg);
+    background-color: black;
     background-size: cover;
 }
 .box{
@@ -12,7 +13,7 @@ body{
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
-  background:rgba(0,0,0,0.4);
+  background:rgba(70, 70, 70, 0.4);
   text-align:center;
 
 }
@@ -44,7 +45,7 @@ width:270px;
 border-color: #ffc400ec;
 
 }
-.box input[type="submit"]{
+.box button[type="submit"]{
 
 
     border: 0;
@@ -61,6 +62,6 @@ transition:0.25px;
 cursor:pointer;
     
 }
-.box input[type="submit"]:hover{
+.box button[type="submit"]:hover{
     background: #ffc400ec;
 }
