--- a/source/style2.css
+++ b/source/style2.css
@@ -1,5 +1,4 @@
 body{
-     
     margin:0;
     padding:0;
     font-family: sans-serif;
@@ -13,7 +12,7 @@ body{
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
-  background:rgba(70, 70, 70, 0.4);
+  background:rgba(68, 68, 68, 0.4);
   text-align:center;
 
 }
@@ -45,7 +44,7 @@ width:270px;
 border-color: #ffc400ec;
 
 }
-.box button[type="submit"]{
+.box input[type="submit"]{
 
 
     border: 0;
@@ -62,6 +61,6 @@ transition:0.25px;
 cursor:pointer;
     
 }
-.box button[type="submit"]:hover{
+.box input[type="submit"]:hover{
     background: #ffc400ec;
 }
