--- a/source/style2.css
+++ b/source/style2.css
@@ -80,3 +80,21 @@ cursor:pointer;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
+
+
+
+.gf input
+ {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 2px auto;
+    text-align: center;
+    padding:14px 10px;
+    width:0px;
+    outline: none;
+    color: rgb(0, 0, 0);
+    border-radius: 24px;
+    transition:0.25px;
+    }
+
